--- a/pages/6047.html
+++ b/pages/6047.html
@@ -674,7 +674,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo lspace="verythinmathspace">:</mo><mi>Σ</mi><mo>⟶</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">\phi \colon \Sigma \longrightarrow X</annotation></semantics></math> the induced “proper volume” or <em>Nambu-Goto action</em>of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding="application/x-tex">\phi</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/integral">integral</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding="application/x-tex">\phi</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/volume+form">volume form</a> of the pullback of the target space metric <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Σ</mi></mrow><annotation encoding="application/x-tex">\Sigma</annotation></semantics></math>.</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo lspace="verythinmathspace">:</mo><mi>Σ</mi><mo>⟶</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">\phi \colon \Sigma \longrightarrow X</annotation></semantics></math> the induced “proper volume” or <em>Nambu-Goto action</em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding="application/x-tex">\phi</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/integral">integral</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding="application/x-tex">\phi</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/volume+form">volume form</a> of the pullback of the target space metric <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Σ</mi></mrow><annotation encoding="application/x-tex">\Sigma</annotation></semantics></math>.</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>NG</mi></msub><mo stretchy="false">(</mo><mi>ϕ</mi><mo stretchy="false">)</mo><mo>≔</mo><msub><mo>∫</mo> <mi>Σ</mi></msub><mi>dvol</mi><mo stretchy="false">(</mo><msup><mi>ϕ</mi> <mo>*</mo></msup><mo stretchy="false">(</mo><mi>g</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   S_{NG}(\phi) \coloneqq \int_{\Sigma} dvol(\phi^\ast(g))
   \,.
@@ -708,7 +708,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>for more on brane tension see also <em>Worldsheet and brane instantonsffect#WorldsheetAndBraneInstantons)</em></p>
+<p>for more on brane tension see also <em><a href="non-perturbative+effect#WorldsheetAndBraneInstantons">Worldsheet and brane instantons</a></em></p>
 </li>
 </ul>
 
@@ -733,14 +733,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 11:21:41.
+  Last revised on October 19, 2018 at 07:15:09.
   See the <a href="https://ncatlab.org/nlab/history/Nambu-Goto action" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nambu-Goto+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nambu-Goto+action/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Nambu-Goto+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nambu-Goto+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Nambu-Goto+action" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nambu-Goto+action/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Nambu-Goto+action" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nambu-Goto+action" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Nambu-Goto action/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
