--- a/pages/846.html
+++ b/pages/846.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9162/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9162/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1533,9 +1533,7 @@ f\cong g \cong [1] \Rightarrow f\star g \cong \Delta[3]
 <p>A useful published reference is</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Phil+Ehlers">P. J. Ehlers</a> and <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>, <em>Joins for (Augmented) Simplicial Sets</em>, Jour. Pure Applied Algebra, 145 (2000) 37-44
-<p>(<a href="http://arxiv.org/abs/math.CT/9904039">arXiv</a>) .</p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/Phil+Ehlers">P. J. Ehlers</a> and <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>, <em>Joins for (Augmented) Simplicial Sets</em>, Jour. Pure Applied Algebra, 145 (2000) 37-44, (<a href="http://arxiv.org/abs/math.CT/9904039">arXiv</a>) .</li>
 </ul>
 
 <p>A useful discussion emphasizing the Day convolution operation is also in section 3.1 of</p>
@@ -1555,14 +1553,14 @@ f\cong g \cong [1] \Rightarrow f\star g \cong \Delta[3]
 
 <div class="revisedby">
   <p>
-  Last revised on October 19, 2018 at 06:16:58.
+  Last revised on October 19, 2018 at 09:07:50.
   See the <a href="https://ncatlab.org/nlab/history/join of simplicial sets" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/join+of+simplicial+sets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/join+of+simplicial+sets/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/join+of+simplicial+sets" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/join+of+simplicial+sets" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/join+of+simplicial+sets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/join+of+simplicial+sets/50" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(50 revisions)</span> | <a href="/nlab/show/diff/join+of+simplicial+sets" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/join+of+simplicial+sets" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/join of simplicial sets/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
