--- a/pages/7673.html
+++ b/pages/7673.html
@@ -788,7 +788,7 @@ margin-left: 0em;
 <p>Conversely, given a category with attributes, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ty</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding="application/x-tex">Ty:C^{op}\to Set</annotation></semantics></math> be the functor corresponding to the discrete fibration <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">E\to C</annotation></semantics></math>, and for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>∈</mo><mi>Ty</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A\in Ty(\Gamma)</annotation></semantics></math> let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Tm(A)</annotation></semantics></math> be the set of <a class="existingWikiWord" href="/nlab/show/sections">sections</a> of the morphism in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> that is the image of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>I</mi></msup></mrow><annotation encoding="application/x-tex">C^I</annotation></semantics></math>. These constructions are inverses up to isomorphism.</p>
 </div>
 
-<p>The following alternative characterization was observed by <a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a>.</p>
+<p>The following alternative characterization was observed by <a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a> (<a href="#Awodey2018">Awodey 2018</a>).</p>
 
 <div class="num_theorem">
 <h6 id="theorem">Theorem</h6>
@@ -1117,7 +1117,7 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Vladimir+Voevodsky">Vladimir Voevodsky</a>, <a href="http://www.math.ias.edu/~vladimir/Site3/Univalent_Foundations_files/expressions_current.pdf">Notes on type systems</a></p>
 </li>
 
-<li>
+<li id="Awodey2018">
 <p><a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a>. (2018). <em>Natural models of homotopy type theory</em>, Mathematical Structures in Computer Science, 28(2), 241-286. <a href="https://arxiv.org/pdf/1406.3219.pdf">PDF</a></p>
 </li>
 </ul>
@@ -1133,14 +1133,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 19:39:38.
+  Last revised on October 19, 2018 at 10:42:53.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/categorical model of dependent types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
