--- a/pages/6779.html
+++ b/pages/6779.html
@@ -588,12 +588,12 @@ margin-left: 0em;
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/ring">ring</a>, its <a class="existingWikiWord" href="/nlab/show/Eilenberg-MacLane+spectrum">Eilenberg-MacLane spectrum</a> is an <a class="existingWikiWord" href="/nlab/show/E-infinity+ring">E-infinity ring</a> and hence receives a canonical <a class="existingWikiWord" href="/nlab/show/unit">unit</a> homomorphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝕊</mi><mo>⟶</mo><mi>H</mi><mi>R</mi></mrow><annotation encoding="application/x-tex">\mathbb{S} \longrightarrow H R</annotation></semantics></math> from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a>.</p>
 
 <p>Under <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> and passing to <a class="existingWikiWord" href="/nlab/show/stable+homotopy+group">stable homotopy group</a>, this induces a <a class="existingWikiWord" href="/nlab/show/natural+transformation">natural transformation</a> from <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups">stable homotopy groups</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> (its <a class="existingWikiWord" href="/nlab/show/stable+homotopy+homology+theory">stable homotopy homology theory</a>) to <a class="existingWikiWord" href="/nlab/show/ordinary+homology">ordinary homology</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>π</mi> <mo>•</mo> <mi>st</mi></msubsup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo>∧</mo><msub><mi>X</mi> <mo>+</mo></msub><mo stretchy="false">)</mo><mo>⟶</mo><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>H</mi><mi>R</mi><mo lspace="0em" rspace="thinmathspace">weddge</mo><msub><mi>X</mi> <mo>+</mo></msub><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>R</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>π</mi> <mo>•</mo> <mi>st</mi></msubsup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>𝕊</mi><mo>∧</mo><msub><mi>X</mi> <mo>+</mo></msub><mo stretchy="false">)</mo><mo>⟶</mo><msub><mi>π</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>H</mi><mi>R</mi><mo>∧</mo><msub><mi>X</mi> <mo>+</mo></msub><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>R</mi><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   \pi^{st}_\bullet(X)
   \;\simeq\;
   \pi_\bullet( \mathbb{S} \wedge X_+ )
   \longrightarrow
-  \pi_\bullet( H R \weddge X_+ )
+  \pi_\bullet( H R \wedge X_+ )
   \simeq
   H_\bullet(X,R)
   \,.
@@ -679,14 +679,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 06:19:01.
+  Last revised on October 22, 2018 at 16:57:26.
   See the <a href="https://ncatlab.org/nlab/history/Hurewicz theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hurewicz+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hurewicz+theorem/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Hurewicz+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hurewicz+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Hurewicz+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hurewicz+theorem/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Hurewicz+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hurewicz+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Hurewicz theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
