--- a/pages/1594.html
+++ b/pages/1594.html
@@ -822,7 +822,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#general_2'>General</a></li>
 <li><a href='#orbifold_cobordism'>Orbifold cobordism</a></li>
-<li><a href='#in_string_theory'>In string theory</a></li>
+<li><a href='#ReferencesInStringTheory'>In string theory</a></li>
 </ul>
 </ul>
 </div>
@@ -1037,7 +1037,7 @@ margin-left: 0em;
 
 <p>See also at <em><a class="existingWikiWord" href="/nlab/show/orbifold+cobordism">orbifold cobordism</a></em>.</p>
 
-<h3 id="in_string_theory">In string theory</h3>
+<h3 id="ReferencesInStringTheory">In string theory</h3>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative string theory</a>, orbifolds as <a class="existingWikiWord" href="/nlab/show/target+spaces">target spaces</a> for a <a class="existingWikiWord" href="/nlab/show/string">string</a> <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> were first considered in</p>
 
@@ -1082,14 +1082,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 02:24:39.
+  Last revised on October 23, 2018 at 04:47:45.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/47" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(47 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
