--- a/pages/17211.html
+++ b/pages/17211.html
@@ -761,6 +761,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#examples'>Examples</a></li>
 <ul>
+<li><a href='#from_stable_cohomotopy_to_ordinary_cohomology'>From stable cohomotopy to ordinary cohomology</a></li>
 <li><a href='#ForComplexOrientedCohomologyTheories'>For complex oriented cohomology theories</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
@@ -807,6 +808,61 @@ margin-left: 0em;
 
 <h2 id="examples">Examples</h2>
 
+<h3 id="from_stable_cohomotopy_to_ordinary_cohomology">From stable cohomotopy to ordinary cohomology</h3>
+
+<p>Consider the <a class="existingWikiWord" href="/nlab/show/unit">unit</a> morphism</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>𝕊</mi><mo>⟶</mo><mi>H</mi><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">
+  \mathbb{S} \longrightarrow H \mathbb{Z}
+
+</annotation></semantics></math></div>
+<p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to the <a class="existingWikiWord" href="/nlab/show/Eilenberg-MacLane+spectrum">Eilenberg-MacLane spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. For any <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a>/<a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> postcomposition with this morphism induces morphisms of <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> (in fact of <a class="existingWikiWord" href="/nlab/show/commutative+rings">commutative rings</a>)</p>
+<div class="maruku-equation" id="eq:BoardmandCohomotopyToOrdinaryCohomology"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>π</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⟶</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  
+  b^n
+  \;\colon\;
+  \pi^n(X)
+  \longrightarrow
+  H^n(X, \mathbb{Z})
+
+</annotation></semantics></math></div>
+<p>from the <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>.</p>
+
+<div class="num_prop">
+<h6 id="proposition">Proposition</h6>
+
+<p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/CW-spectrum">CW-spectrum</a> which</p>
+
+<ol>
+<li>
+<p>is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>m</mi><mo>−</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(m-1)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos">(m-1)-connected</a></p>
+</li>
+
+<li>
+<p>of dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">d \in \mathbb{N}</annotation></semantics></math></p>
+</li>
+</ol>
+
+<p>then</p>
+
+<ol>
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>m</mi><mo>≤</mo><mi>n</mi><mo>≤</mo><mi>d</mi><mo>−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">
+  m \leq n\leq d -1
+
+</annotation></semantics></math></div>
+<p>is an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub><mi>ker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{d-n} ker(b^n) \;\simeq\; 0
+
+</annotation></semantics></math></div></li>
+
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for …</p>
+</li>
+</ol>
+</div>
+
 <h3 id="ForComplexOrientedCohomologyTheories">For complex oriented cohomology theories</h3>
 
 <p>Used for <a class="existingWikiWord" href="/nlab/show/complex+oriented+cohomology+theories">complex oriented cohomology theories</a> and proof of <a class="existingWikiWord" href="/nlab/show/Quillen%27s+theorem+on+MU">Quillen's theorem on MU</a> via the <a class="existingWikiWord" href="/nlab/show/homology+of+MU">homology of MU</a> (…)</p>
@@ -844,14 +900,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 06:15:02.
+  Last revised on October 23, 2018 at 08:58:46.
   See the <a href="https://ncatlab.org/nlab/history/Boardman homomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Boardman+homomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Boardman+homomorphism/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Boardman+homomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Boardman+homomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Boardman homomorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
